// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`argument-name-clash.js 1`] = `
====================================options=====================================
parsers: ["babel", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
function f(a,a){return a}

=====================================output=====================================
function f(a, a) {
  return a;
}

================================================================================
`;

exports[`keywords.js 1`] = `
====================================options=====================================
parsers: ["babel", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
var package = require('../package');

/**
 * My amazing comment
 */
function myFunction() {
	return 'StringGainz';
}

=====================================output=====================================
var package = require("../package");

/**
 * My amazing comment
 */
function myFunction() {
  return "StringGainz";
}

================================================================================
`;

exports[`octal-number.js 1`] = `
====================================options=====================================
parsers: ["babel", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
0777

=====================================output=====================================
0777;

================================================================================
`;
